--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,31 @@
 astroid==2.4.2
+beautifulsoup4==4.9.1
 branca==0.4.1
 certifi==2020.4.5.2
 chardet==3.0.4
 click==7.1.2
+cycler==0.10.0
 Flask==1.1.2
 folium==0.11.0
 idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
+kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
+lxml==4.5.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 numpy==1.18.5
+pandas==1.0.4
 pylint==2.5.3
 pymongo==3.10.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
 requests==2.23.0
 six==1.15.0
+soupsieve==2.0.1
 toml==0.10.1
 urllib3==1.25.9
 Werkzeug==1.0.1
