--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,11 @@ services:
         container_name: "airQmap_db"
         volumes:
             - "./data/db:/data/db"
+    app:
+        build: .
+        image: airqmap_app_img
+        container_name: airqmap_app
+        ports:
+            - 5000:5000
+        depends_on: 
+            - database
